Make license agreement show up on ja_JP locale systems.

b=58604
r=dbragg,dveditz
a=brendan

(Dan Veditz will watch the tree for me.  Thanks Dan!)